test/types/tuple/errors/returnWrongSize.good
returnWrongSize.chpl:1: In function 'foo':
returnWrongSize.chpl:3: error: type mismatch in assignment from 2*int(64) to 3*int(64)
